@@ -25,16 +25,15 @@ import peersim.dynamics.NodeInitializer;
 
 /**
 * Schedules the first execution of the cycle based protocol instances in
-* the event driven angine.
-* Unlike {@link Scheduler}, this component is a standalone {@link Control},
-* so for all {@link CDProtocol}s one instance of this scheduler needs to be
-* specified in an event driven simulation. It will most often be used as an
+* the event driven engine.
+* It implements {@link Control} but it will most often be invoked only
+* once for each protocol as an
 * initializer, since the scheduled events schedule themselves for the
 * consequtive executions (see {@link NextCycleEvent}).
 *
-* <p>The {@link CDProtocol} specification in the configuration needs to
-* contain a {@link Scheduler} specification for the step size (config
-* parameter {@value Scheduler#PAR_STEP}). This value is used as a cycle length.
+* <p>All {@link CDProtocol} specifications in the configuration need to
+* contain a {@link Scheduler} specification at least for the step size (see
+* {@link Scheduler}). This value is used as a cycle length.
 *@see NextCycleEvent
 */
 public class CDScheduler implements Control, NodeInitializer {
@@ -53,7 +52,7 @@ private static final String PAR_NEXTC = "nextcycle";
 /**
 * The protocols that this scheduler schedules for the first execution.
 * It might contain several protocol names, separated by whitespace. All
-* protocols will be scheduled based on the common parameters set for this
+* protocols will be scheduled based on the common parameter set for this
 * scheduler and the parameters of the protocol (cycle length).
 * Protocols are scheduled independently of each other.
 * @config
@@ -61,11 +60,11 @@ private static final String PAR_NEXTC = "nextcycle";
 private static final String PAR_PROTOCOL = "protocol";
 
 /**
-* If set, it means that the initial execution of the give protocol is
+* If set, it means that the initial execution of the given protocol is
 * scheduled for a different random time for all nodes. The random time
 * is a sample between the current time (inclusive) and the cycle length
-* (exclusive), the latter being specified by parameter
-* {@value Scheduler#PAR_STEP} of the assigned protocol.
+* (exclusive), the latter being specified by the step parameter
+* (see {@link Scheduler}) of the assigned protocol.
 * @see #execute
 * @config
 */
@@ -108,6 +107,7 @@ static {
 // --------------------------------------------------------------------
 
 /**
+* Initialization based on configuration parameters.
 */
 public CDScheduler(String n) {
 
@@ -161,9 +161,9 @@ public boolean execute() {
  * Schedules the protocol at given node
  * for the first execution adding it to the priority queue of the event driven
  * simulation. The time of the first execution is detemined by
- * {@link #firstDelay}. If {@link #firstDelay} returns a value that defines
+ * {@link #firstDelay}. If {@link #firstDelay} defines
  * a next execution time which is not valid according to the schedule of the
- * protocol then the protocol is not scheduled for execution from now on.
+ * protocol then no execution is scheduled for that protocol.
 */
 public void initialize(Node n) {
 	
@@ -188,9 +188,8 @@ public void initialize(Node n) {
 * Returns the time (through giving the delay from the current time)
 * when this even is first executed.
 * If {@value #PAR_RNDSTART} is not set, it returns zero, otherwise
-* a random value between 0, inclusive, and the configured cycle length
-* (the {@value Scheduler#PAR_STEP} parameter of the protocol), exclusive.
-* @param cyclelength The length of a cycle of the cycle based protocol
+* a random value between 0, inclusive, and cyclelength, exclusive.
+* @param cyclelength The cycle length of the cycle based protocol
 * for which this method is called
 */
 protected long firstDelay(long cyclelength) {
