@@ -23,7 +23,7 @@ import peersim.core.Scheduler;
 
 
 /**
- * 
+ * Wrapper for {@link Control}s to be executed in an event driven simulation.
  *
  * @author Alberto Montresor
  * @version $Revision$
