@@ -1,4 +1,9 @@
 <html><body>
-The event-driven simulator. <br>
+The event-driven simulator.
+A good point to start browsing is {@link peersim.edsim.EDSimulator}.
+Class {@link peersim.edsim.CDScheduler} is also interesting as it represents
+a bridge between package {@link peersim.cdsim} and this package.
+Finally, check out {@link peersim.transport} too as it is very
+useful for defining the transport layer, that defines delays, omissions, etc.
 </body></html>
 
